make layout more responsive by not clipping the header text in skinny mode

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -153,6 +153,20 @@
         color: white;
     }
 
+    @media screen and (max-width: 1100px) {
+        header.exception {
+            height: auto;
+        }
+
+        header.exception h2,
+        header.exception p {
+            overflow: visible;
+            white-space: normal;
+            word-wrap: break-word;
+            height: auto;
+        }
+    }
+
     <%#
     /* Light theme */
     header.exception {
