go for a slightly flatter look

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -232,9 +232,9 @@
     /* Each item */
     ul.frames li {
         background-color: #f8f8f8;
-        background: -webkit-linear-gradient(top, #f8f8f8, #f0f0f0);
-        background: -moz-linear-gradient(top, #f8f8f8, #f0f0f0);
-        background: linear-gradient(top, #f8f8f8, #f0f0f0);
+        background: -webkit-linear-gradient(top, #f8f8f8 80%, #f0f0f0);
+        background: -moz-linear-gradient(top, #f8f8f8 80%, #f0f0f0);
+        background: linear-gradient(top, #f8f8f8 80%, #f0f0f0);
         border-bottom: solid 1px #e2e2e2;
         padding: 7px 20px;
 
