strip out extraneous info in syntax error message

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -204,7 +204,7 @@
         <table>
             <tr>
                 <th>Message</th>
-                <td><%= exception.message %></td>
+                <td><%= exception_message %></td>
             </tr>
             <% if backtrace_frames.any? %>
                 <tr>
