--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -242,7 +242,6 @@
      * --------------------------------------------------------------------- */
 
     ul.frames {
-        border-bottom: solid 1px #bbb;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 
@@ -252,7 +251,7 @@
         background: -webkit-linear-gradient(top, #f8f8f8 80%, #f0f0f0);
         background: -moz-linear-gradient(top, #f8f8f8 80%, #f0f0f0);
         background: linear-gradient(top, #f8f8f8 80%, #f0f0f0);
-        border-bottom: solid 1px #e2e2e2;
+        box-shadow: inset 0 -1px 0 #e2e2e2;
         padding: 7px 20px;
 
         cursor: pointer;
