--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -647,59 +647,63 @@
 </head>
 <body>
     <div class='top'>
-    <header class="exception">
-        <h2><strong><%= exception.class %></strong> <span>at <%= request_path %></span></h2>
-        <p><%= exception_message %></p>
-    </header>
-
+        <header class="exception">
+            <h2><strong><%= exception.class %></strong> <span>at <%= request_path %></span></h2>
+            <p><%= exception_message %></p>
+        </header>
     </div>
 
     <section class="backtrace">
         <nav class="sidebar">
-        <nav class="tabs">
-            <a href="#" id="application_frames">Application Frames</a>
-            <a href="#" id="all_frames">All Frames</a>
-        </nav>
-        <ul class="frames">
-            <% backtrace_frames.each_with_index do |frame, index| %>
-                <li
-                    class="<%= frame.context %>"
-                    style="display: none"
-                    data-context="<%= frame.context %>"
-                    data-full-filename="<%= frame.filename %>"
-                    data-filename="<%= frame.pretty_path %>"
-                    data-line="<%= frame.line %>"
-                    data-name="<%= frame.name %>"
-                    data-index="<%= index %>"
-                >
-                    <span class='stroke'></span>
-                    <i class="icon <%= frame.context %>"></i>
-                    <div class="info">
-                    <div class="name"><strong><%= frame.class_name || frame.name %></strong><span class='method'><%= frame.method_name %></span></div>
-                    <div class="location"><span class="filename"><%= frame.pretty_path %></span>, line <span class="line"><%= frame.line %></span></div>
-                    </div>
-                </li>
-            <% end %>
-        </ul>
+            <nav class="tabs">
+                <a href="#" id="application_frames">Application Frames</a>
+                <a href="#" id="all_frames">All Frames</a>
+            </nav>
+            <ul class="frames">
+                <% backtrace_frames.each_with_index do |frame, index| %>
+                    <li
+                        class="<%= frame.context %>"
+                        style="display: none"
+                        data-context="<%= frame.context %>"
+                        data-full-filename="<%= frame.filename %>"
+                        data-filename="<%= frame.pretty_path %>"
+                        data-line="<%= frame.line %>"
+                        data-name="<%= frame.name %>"
+                        data-index="<%= index %>"
+                    >
+                        <span class='stroke'></span>
+                        <i class="icon <%= frame.context %>"></i>
+                        <div class="info">
+                            <div class="name">
+                                <strong><%= frame.class_name || frame.name %></strong><span class='method'><%= frame.method_name %></span>
+                            </div>
+                            <div class="location">
+                                <span class="filename"><%= frame.pretty_path %></span>, line <span class="line"><%= frame.line %></span>
+                            </div>
+                        </div>
+                    </li>
+                <% end %>
+            </ul>
         </nav>
 
         <% backtrace_frames.each_with_index do |frame, index| %>
             <div class="frame_info" id="frame_info_<%= index %>" style="display:none;">
                 <header class="trace_info">
-                <div class="title">
-                <h2 class="name"><%= frame.name %></h2>
-                <div class="location"><span class="filename"><%= frame.pretty_path %></span></div>
-                </div>
-                <%== highlighted_code_block frame %>
-                
-                <% if BetterErrors.binding_of_caller_available? && frame.frame_binding %>
-                    <div class="repl">
-                        <div class="console">
-                            <pre></pre>
-                            <div class="prompt"><span>&gt;&gt;</span> <input/></div>
-                        </div>
+                    <div class="title">
+                        <h2 class="name"><%= frame.name %></h2>
+                        <div class="location"><span class="filename"><%= frame.pretty_path %></span></div>
                     </div>
-                <% end %>
+                    
+                    <%== highlighted_code_block frame %>
+                
+                    <% if BetterErrors.binding_of_caller_available? && frame.frame_binding %>
+                        <div class="repl">
+                            <div class="console">
+                                <pre></pre>
+                                <div class="prompt"><span>&gt;&gt;</span> <input/></div>
+                            </div>
+                        </div>
+                    <% end %>
                 </header>
 
                 <% if BetterErrors.binding_of_caller_available? && frame.frame_binding %>
@@ -709,6 +713,7 @@
 
                     <div class="variable_info"></div>
                 <% end %>
+                
                 <% unless BetterErrors.binding_of_caller_available? %>
                     <div class="hint">
                         <strong>Tip:</strong> add <code>gem "binding_of_caller"</code> to your Gemfile to enable the REPL and local/instance variable inspection.
