stop frame info overlapping the scroll bar

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -100,7 +100,8 @@
             left: 40%;
 
             padding: 20px;
-            padding-left: 40px;
+            padding-left: 10px;
+            margin-left: 30px;
         }
     }
 
