make long frame names overflow and ellipsis properly

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -268,7 +268,7 @@
         overflow: hidden;
         height: 1.5em;
 
-        white-space: normal;
+        white-space: nowrap;
         word-wrap: none;
         text-overflow: ellipsis;
     }
