set @class_name and @method_name properly

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -676,7 +676,7 @@
                         <i class="icon <%= frame.context %>"></i>
                         <div class="info">
                             <div class="name">
-                                <strong><%= frame.class_name || frame.name %></strong><span class='method'><%= frame.method_name %></span>
+                                <strong><%= frame.class_name %></strong><span class='method'><%= frame.method_name %></span>
                             </div>
                             <div class="location">
                                 <span class="filename"><%= frame.pretty_path %></span>, line <span class="line"><%= frame.line %></span>
