--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -679,7 +679,13 @@
                                 <strong><%= frame.class_name %></strong><span class='method'><%= frame.method_name %></span>
                             </div>
                             <div class="location">
-                                <span class="filename"><%= frame.pretty_path %></span>, line <span class="line"><%= frame.line %></span>
+                                <% if frame.editor_path %>
+                                    <a href="<%= frame.editor_path %>">    
+                                <% end %>
+                                    <span class="filename"><%= frame.pretty_path %></span>, line <span class="line"><%= frame.line %></span>
+                                <% if frame.editor_path %>
+                                    </a>    
+                                <% end %>
                             </div>
                         </div>
                     </li>
@@ -692,7 +698,13 @@
                 <header class="trace_info">
                     <div class="title">
                         <h2 class="name"><%= frame.name %></h2>
-                        <div class="location"><span class="filename"><%= frame.pretty_path %></span></div>
+                        <% if frame.editor_path %>
+                            <a href="<%= frame.editor_path %>">
+                        <% end %>
+                            <div class="location"><span class="filename"><%= frame.pretty_path %></span></div>
+                        <% if frame.editor_path %>
+                            </a>
+                        <% end %>
                     </div>
                     
                     <%== highlighted_code_block frame %>
