fix vardumps not working when there's a BasicObject variable. fixes #37

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -608,6 +608,12 @@
         white-space: normal;
     }
 
+    /* "(object doesn't support inspect)" */
+    .sub .unsupported {
+      font-family: sans-serif;
+      color: #777;
+    }
+
     /* ---------------------------------------------------------------------
      * Scrollbar
      * --------------------------------------------------------------------- */
