--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -594,6 +594,8 @@
         font-weight: bold;
         font-size: 0.8em;
         padding-right: 20px;
+
+        word-wrap: break-word;
     }
 
     .sub table td pre {
