--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -422,6 +422,16 @@
         font-weight: bold;
         font-size: 10pt;
     }
+    
+    .trace_info .title .location a {
+        color:inherit;
+        text-decoration:none;
+        border-bottom:1px solid #aaaaaa;
+    }
+    
+    .trace_info .title .location a:hover {
+        border-color:#666666;
+    }
 
     .trace_info .title .name {
         float: right;
