fix issue 46 js error of the click() function in Safari 5.1.7

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -889,7 +889,7 @@
     (
       document.querySelector(".frames li.application") ||
       document.querySelector(".frames li")
-    ).click();
+    ).onclick();
     
     var applicationFramesButton = document.getElementById("application_frames");
     var allFramesButton = document.getElementById("all_frames");
@@ -916,7 +916,7 @@
         return false;
     };
     
-    applicationFramesButton.click();
+    applicationFramesButton.onclick();
 })();
 </script>
 </html>
