fix bug: throw 404 when OID get a native number in templates/main.erb

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -703,7 +703,7 @@
 </body>
 <script>
 (function() {
-    var OID = <%== object_id.to_s.inspect %>;
+    var OID = <%== object_id.abs.to_s.inspect %>;
     
     var previousFrame = null;
     var previousFrameInfo = null;
