--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -438,6 +438,21 @@
         font-weight: 200;
     }
 
+    .filename a {
+        color: #999999;
+        text-decoration:none;
+        border-bottom:1px solid #999999;
+    }
+
+    .filename a:hover {
+        border-color:#aaaaaa;
+    }
+
+    li.selected .filename a {
+        color: white;
+        border-bottom:1px solid white;
+    }
+
     .code, .console, .unavailable {
         background: #fff;
         padding: 5px;
@@ -688,7 +703,7 @@
                                 <strong><%= frame.class_name %></strong><span class='method'><%= frame.method_name %></span>
                             </div>
                             <div class="location">
-                                <span class="filename"><%= frame.pretty_path %></span>, line <span class="line"><%= frame.line %></span>
+                                <span class="filename"><a href="<%= editor_url(frame) %>"><%= frame.pretty_path %></a></span>, line <span class="line"><%= frame.line %></span>
                             </div>
                         </div>
                     </li>
