--- a/lib/better_errors/templates/variable_info.erb
+++ b/lib/better_errors/templates/variable_info.erb
@@ -18,7 +18,7 @@
 
 <% if BetterErrors.binding_of_caller_available? && @frame.frame_binding %>
     <div class="hint">
-        This a live shell. Type in here.
+        This is a live shell. Type in here.
     </div>
 
     <div class="variable_info"></div>
