--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -2,6 +2,10 @@
 <html>
 <head>
     <title><%= exception.class %> at <%= request_path %></title>
+</head>
+<body>
+
+    <%# Stylesheets are placed in the <body> for Turbolinks compatibility. %>
     <style>
     /* Basic reset */
     * {
@@ -660,15 +664,15 @@
     .code:hover::-webkit-scrollbar-thumb {
         background: #888;
     }
-
-
     </style>
-</head>
-<body>
+
+    <%#
+      If Rails's Turbolinks is used, the Better Errors page is probably
+      rendered in the host app's layout. Let's empty out the styles of the
+      host app.
+    %>
     <script>
-      // If Rails's Turbolinks is used, the Better Errors page is probably
-      // rendered in the host app's layout. Redirect before the page is rendered
-      if (window.Turbolinks) window.location.href = '/__better_errors';
+      if (window.Turbolinks) document.head.innerHTML = "";
     </script>
 
     <div class='top'>
