--- a/lib/better_errors/templates/text.erb
+++ b/lib/better_errors/templates/text.erb
@@ -1,15 +1,12 @@
-<%= exception.class %> at <%= request_path %>
-<%= "=" * (exception.class.to_s.size + request_path.to_s.size + 4) %>
+<%= text_heading("=", "%s at %s" % [exception.class, request_path]) %>
 
 > <%= exception_message %>
 <% if backtrace_frames.any? %>
 
-Code
-----
+<%= text_heading("-", "%s, line %i" % [first_frame.pretty_path, first_frame.line]) %>
 
 ``` ruby
-<%== highlighted_code_block(first_frame, :text) %>
-```
+<%== highlighted_code_block(first_frame, :text) %>```
 
 App backtrace
 -------------
