use proper formatters from views

--- a/lib/better_errors/templates/text.erb
+++ b/lib/better_errors/templates/text.erb
@@ -6,7 +6,7 @@
 <%== text_heading("-", "%s, line %i" % [first_frame.pretty_path, first_frame.line]) %>
 
 ``` ruby
-<%== highlighted_code_block(first_frame, :text) %>```
+<%== text_formatted_code_block(first_frame) %>```
 
 App backtrace
 -------------
