--- a/lib/better_errors/templates/variable_info.erb
+++ b/lib/better_errors/templates/variable_info.erb
@@ -4,7 +4,7 @@
         <div class="location"><span class="filename"><a href="<%= editor_url(@frame) %>"><%= @frame.pretty_path %></a></span></div>
     </div>
     
-    <%== highlighted_code_block @frame %>
+    <%== html_formatted_code_block @frame %>
 
     <% if BetterErrors.binding_of_caller_available? && @frame.frame_binding %>
         <div class="repl">
