--- a/lib/better_errors/templates/variable_info.erb
+++ b/lib/better_errors/templates/variable_info.erb
@@ -1,10 +1,11 @@
-<header class="trace_info">
+<header class="trace_info clearfix">
     <div class="title">
         <h2 class="name"><%= @frame.name %></h2>
         <div class="location"><span class="filename"><a href="<%= editor_url(@frame) %>"><%= @frame.pretty_path %></a></span></div>
     </div>
-    
-    <%== html_formatted_code_block @frame %>
+    <div class="code_block clearfix">
+        <%== html_formatted_code_block @frame %>
+    </div>
 
     <% if BetterErrors.binding_of_caller_available? && @frame.frame_binding %>
         <div class="repl">
