Avoid using Function.prototype.bind for compatbility with older browsers
Closes #194.

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -801,7 +801,10 @@
         this.inputElement   = this.container.querySelector("input");
         this.outputElement  = this.container.querySelector("pre");
     
-        this.inputElement.onkeydown = this.onKeyDown.bind(this);
+        var self = this;
+        this.inputElement.onkeydown = function(ev) {
+            self.onKeyDown(ev);
+        };
     
         this.setPrompt(">>");
         
