save commands history into localStorage

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -794,8 +794,13 @@
     function REPL(index) {
         this.index = index;
         
-        this.previousCommands = [];
-        this.previousCommandOffset = 0;
+        var previousCommands = JSON.parse(localStorage.getItem("previousCommands"));
+        if(previousCommands === null) {
+          localStorage.setItem("previousCommands", JSON.stringify([]));
+          previousCommands = []
+        }
+
+        this.previousCommandOffset = previousCommands.length;
     }
     
     REPL.all = [];
@@ -865,7 +870,9 @@
     REPL.prototype.onEnterKey = function() {
         var text = this.getInput();
         if(text != "" && text !== undefined) {
-            this.previousCommandOffset = this.previousCommands.push(text);
+            var previousCommands = JSON.parse(localStorage.getItem("previousCommands"));
+            this.previousCommandOffset = previousCommands.push(text);
+            localStorage.setItem("previousCommands", JSON.stringify(previousCommands));
         }
         this.setInput("");
         this.sendInput(text);
@@ -873,6 +880,7 @@
     
     REPL.prototype.onNavigateHistory = function(direction) {
         this.previousCommandOffset += direction;
+        var previousCommands = JSON.parse(localStorage.getItem("previousCommands"));
         
         if(this.previousCommandOffset < 0) {
             this.previousCommandOffset = -1;
@@ -880,13 +888,13 @@
             return;
         }
         
-        if(this.previousCommandOffset >= this.previousCommands.length) {
-            this.previousCommandOffset = this.previousCommands.length;
+        if(this.previousCommandOffset >= previousCommands.length) {
+            this.previousCommandOffset = previousCommands.length;
             this.setInput("");
             return;
         }
         
-        this.setInput(this.previousCommands[this.previousCommandOffset]);
+        this.setInput(previousCommands[this.previousCommandOffset]);
     };
     
     REPL.prototype.onKeyDown = function(ev) {
